tests/rosetta/out/Swift/bitmap-midpoint-circle-algorithm.error
run error: exit status 1
/tmp/TestMochiToSwiftbitmap-midpoint-circle-algorithm270349292/001/main.swift:3:25: error: cannot assign value of type '[Any]' to type '[[String]]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:35Z
 2 | func initGrid(_ size: Int) -> [[String]] {
 3 |     var g: [[String]] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[[String]]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and '[String]') are expected to be equal
 4 |     var y = 0
 5 |     while y < size {

/tmp/TestMochiToSwiftbitmap-midpoint-circle-algorithm270349292/001/main.swift:6:29: error: cannot assign value of type '[Any]' to type '[String]'
 4 |     var y = 0
 5 |     while y < size {
 6 |         var row: [String] = [Any]()
   |                             |- error: cannot assign value of type '[Any]' to type '[String]'
   |                             `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 7 |         var x = 0
 8 |         while x < size {

/tmp/TestMochiToSwiftbitmap-midpoint-circle-algorithm270349292/001/main.swift:19:13: error: cannot assign through subscript: 'g' is a 'let' constant
17 | func set(_ g: [[String]], _ x: Int, _ y: Int) {
18 |     if x >= 0 && x < g[0].count && y >= 0 && y < g.count {
19 |         g[y][x] = "#"
   |             `- error: cannot assign through subscript: 'g' is a 'let' constant
20 |     }
21 | }

/tmp/TestMochiToSwiftbitmap-midpoint-circle-algorithm270349292/001/main.swift:24:9: warning: variable 'g' was never mutated; consider changing to 'let' constant
22 | func circle(_ r: Int) -> [[String]] {
23 |     let size = r * 2 + 1
24 |     var g = initGrid(size)
   |         `- warning: variable 'g' was never mutated; consider changing to 'let' constant
25 |     var x = r
26 |     var y = 0
